added Valentin papers

--- a/downloads/mfis-pubs.bib
+++ b/downloads/mfis-pubs.bib
@@ -34,6 +34,30 @@
 
 %%last update november 2023 cesar.
 
+@inproceedings{DBLP:conf/sefm/CassanoF24,
+  author       = {Valentin Cassano and
+                  Sabine Frittella},
+  editor       = {Jos{\'{e}} Proen{\c{c}}a and
+                  Raul Fervari and
+                  Manuel A. Martins and
+                  Reinhard Kahle and
+                  Graham Pluck},
+  title        = {Pivotal Rules Consequence in Action Model Logic},
+  booktitle    = {Software Engineering and Formal Methods. {SEFM} 2024 Collocated Workshops
+                  - ReacTS 2024 and {CIFMA} 2024, Aveiro, Portugal, November 4-5, 2024,
+                  Revised Selected Papers},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {15551},
+  pages        = {99--104},
+  publisher    = {Springer},
+  year         = {2024},
+  url          = {https://doi.org/10.1007/978-3-031-94748-3\_8},
+  doi          = {10.1007/978-3-031-94748-3\_8},
+  timestamp    = {Thu, 21 Aug 2025 22:05:48 +0200},
+  biburl       = {https://dblp.org/rec/conf/sefm/CassanoF24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
 @article{DBLP:journals/pacmse/NolascoMDGGPUAF24,
   author       = {Agust{\'{\i}}n Nolasco and
                   Facundo Molina and
@@ -314,6 +338,53 @@
 	bdsk-url-1 = {https://dblp.org/rec/conf/kbse/MolinadA23},
 	bdsk-url-2 = {https://doi.org/10.1109/ASE56229.2023.00024}}
 
+@inproceedings{DBLP:conf/jelia/ArecesCDF23,
+  author       = {Carlos Areces and
+                  Valentin Cassano and
+                  Danae Dutto and
+                  Raul Fervari},
+  editor       = {Sarah Alice Gaggl and
+                  Maria Vanina Martinez and
+                  Magdalena Ortiz},
+  title        = {Data Graphs with Incomplete Information (and a Way to Complete Them)},
+  booktitle    = {Logics in Artificial Intelligence - 18th European Conference, {JELIA}
+                  2023, Dresden, Germany, September 20-22, 2023, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {14281},
+  pages        = {729--744},
+  publisher    = {Springer},
+  year         = {2023},
+  url          = {https://doi.org/10.1007/978-3-031-43619-2\_49},
+  doi          = {10.1007/978-3-031-43619-2\_49},
+  timestamp    = {Sun, 04 Aug 2024 19:40:49 +0200},
+  biburl       = {https://dblp.org/rec/conf/jelia/ArecesCDF23.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/tableaux/ArecesCFH23,
+  author       = {Carlos Areces and
+                  Valentin Cassano and
+                  Raul Fervari and
+                  Guillaume Hoffmann},
+  editor       = {Revantha Ramanayake and
+                  Josef Urban},
+  title        = {DefTab : {A} Tableaux System for Sceptical Consequence in Default
+                  Modal Logics},
+  booktitle    = {Automated Reasoning with Analytic Tableaux and Related Methods - 32nd
+                  International Conference, {TABLEAUX} 2023, Prague, Czech Republic,
+                  September 18-21, 2023, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {14278},
+  pages        = {37--48},
+  publisher    = {Springer},
+  year         = {2023},
+  url          = {https://doi.org/10.1007/978-3-031-43513-3\_3},
+  doi          = {10.1007/978-3-031-43513-3\_3},
+  timestamp    = {Sun, 04 Aug 2024 19:43:15 +0200},
+  biburl       = {https://dblp.org/rec/conf/tableaux/ArecesCFH23.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
 @inproceedings{DBLP:conf/issta/MolinaPAF23,
 	author = {Facundo Molina and Pablo Ponzio and Nazareno Aguirre and Marcelo F. Frias},
 	bibsource = {dblp computer science bibliography, https://dblp.org},
@@ -501,6 +572,29 @@
 
 
 %%2022
+
+@inproceedings{DBLP:conf/wollic/ArecesCF22,
+  author       = {Carlos Areces and
+                  Valentin Cassano and
+                  Raul Fervari},
+  editor       = {Agata Ciabattoni and
+                  Elaine Pimentel and
+                  Ruy J. G. B. de Queiroz},
+  title        = {Non-monotonic Reasoning via Dynamic Consequence},
+  booktitle    = {Logic, Language, Information, and Computation - 28th International
+                  Workshop, WoLLIC 2022, Ia{\c{s}}i, Romania, September 20-23, 2022,
+                  Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {13468},
+  pages        = {395--410},
+  publisher    = {Springer},
+  year         = {2022},
+  url          = {https://doi.org/10.1007/978-3-031-15298-6\_25},
+  doi          = {10.1007/978-3-031-15298-6\_25},
+  timestamp    = {Sun, 04 Aug 2024 19:42:12 +0200},
+  biburl       = {https://dblp.org/rec/conf/wollic/ArecesCF22.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
 
 @inproceedings{DBLP:conf/cav/CastroDDP22,
 	author = {Pablo F. Castro and Pedro R. D'Argenio and Ramiro Demasi and Luciano Putruele},
